#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-18
2017-10-19 Mikhail S. Dubrovin
- GlobalUtils.evaluate_limits - is modified

2017-10-16 Mikhail S. Dubrovin
- Documentation improvement - in all modules add titles for better visibility.

Tag: V01-00-17
2017-10-13 Mikhail S. Dubrovin
- Jungfrau - add real segment geometry and all masks
	modified:   src/CalibParsBaseJungfrauV1.py
	modified:   src/GeometryAccess.py
	modified:   src/GeometryObject.py
	modified:   src/RunProcUtils.py
	modified:   src/SegGeometry.py
	modified:   src/SegGeometryEpix100V1.py
	new file:   src/SegGeometryJungfrauV1.py
	modified:   src/SegGeometryStore.py
	new file:   src/SubprocUtils.py

Tag: V01-00-16
2017-10-10 Mikhail S. Dubrovin
- add stuff for Jungfrau
  - CalibPars*, GlobalUtils - add new type of constants pixel_offset, pixel_datast
  - add ex-get-epix-id.py, RunProcUtils.py

Tag: V01-00-15
2017-10-02 Mikhail S. Dubrovin
- GlobalUtils - move methods from jungfrau_ndarr_dark_proc

Tag: V01-00-14
2017-09-27 Mikhail S. Dubrovin
- GlobalUtils - add methods for file deployment etc.

Tag: V01-00-13
2017-09-22 Mikhail S. Dubrovin
- DCMethods - cleanup code, remove old versions of methods.

Tag: V01-00-12
2017-09-21 Mikhail S. Dubrovin
- Return cached constants (even default) directly from GenericCalibPars.constatns()

Tag: V01-00-11
2017-09-19 Mikhail S. Dubrovin
move method par_to_tsec from DCMethods to DCUtils.py where psana is imported

Tag: V01-00-10
2017-09-01 Mikhail S. Dubrovin
CalibFileFinder - add more protection; CalibParsStore - use env_time
	modified:   doc/ChangeLog
	modified:   doc/web/Makefile
	modified:   examples/ex-ipython.py