@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-19
+2017-10-31 Mikhail S. Dubrovin
+- update data status processing
+
 Tag: V01-00-18
 2017-10-19 Mikhail S. Dubrovin
 - GlobalUtils.evaluate_limits - is modified
